# rlsrag

./: .gitignore  .pdm-python  .pre-commit-config.yaml  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  tox.ini
.github/actions/setup-pdm-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml  validate-codecov-config.yml
docs/: index.md  modules.md
get_data/: get_aws_images.py  get_docs.py  rhel_aws.py
get_data/raw_data/docs/: accessing_identity_management_services.html  administering_the_system_using_the_gnome_desktop_environment.html  automatically_installing_rhel.html  automating_system_administration_by_using_rhel_system_roles.html  boot_options_for_rhel_installer.html  building_running_and_managing_containers.html  composing_a_customized_rhel_system_image.html  composing_installing_and_managing_rhel_for_edge_images.html  configuring_a_red_hat_high_availability_cluster_on_red_hat_openstack_platform.html  configuring_and_managing_cloud-init_for_rhel_9.html  configuring_and_managing_high_availability_clusters.html  configuring_and_managing_logical_volumes.html  configuring_and_managing_networking.html  configuring_and_managing_virtualization.html  configuring_and_using_a_cups_printing_server.html  configuring_and_using_database_servers.html  configuring_and_using_network_file_services.html  configuring_authentication_and_authorization_in_rhel.html  configuring_basic_system_settings.html  configuring_device_mapper_multipath.html  configuring_firewalls_and_packet_filters.html  configuring_gfs2_file_systems.html  configuring_infiniband_and_rdma_networks.html  considerations_in_adopting_rhel_9.html  customizing_anaconda.html  customizing_the_gnome_desktop_environment.html  deduplicating_and_compressing_logical_volumes_on_rhel.html  deploying_mail_servers.html  deploying_rhel_9_on_amazon_web_services.html  deploying_rhel_9_on_google_cloud_platform.html  deploying_rhel_9_on_microsoft_azure.html  deploying_web_servers_and_reverse_proxies.html  developing_c_and_cpp_applications_in_rhel_9.html  getting_started_with_the_gnome_desktop_environment.html  getting_the_most_from_your_support_experience.html  installing_and_using_dynamic_programming_languages.html  installing_identity_management.html  installing_trust_between_idm_and_ad.html  integrating_rhel_systems_directly_with_windows_active_directory.html  interactively_installing_rhel_from_installation_media.html  (+30 more)
plaintext/9/: accessing_identity_management_services.txt  administering_the_system_using_the_gnome_desktop_environment.txt  anaconda_customization_guide.txt  automatically_installing_rhel.txt  automating_system_administration_by_using_rhel_system_roles.txt  automating_system_administration_by_using_rhel_system_roles_in_rhel_7.9.txt  boot_options_for_rhel_installer.txt  building_running_and_managing_containers.txt  composing_a_customized_rhel_system_image.txt  composing_installing_and_managing_rhel_for_edge_images.txt  configuring_a_red_hat_high_availability_cluster_on_red_hat_openstack_platform.txt  configuring_and_managing_cloud-init_for_rhel_9.txt  configuring_and_managing_high_availability_clusters.txt  configuring_and_managing_logical_volumes.txt  configuring_and_managing_networking.txt  configuring_and_managing_virtualization.txt  configuring_and_using_a_cups_printing_server.txt  configuring_and_using_database_servers.txt  configuring_and_using_network_file_services.txt  configuring_authentication_and_authorization_in_rhel.txt  configuring_basic_system_settings.txt  configuring_device_mapper_multipath.txt  configuring_firewalls_and_packet_filters.txt  configuring_gfs2_file_systems.txt  configuring_infiniband_and_rdma_networks.txt  considerations_in_adopting_rhel_9.txt  customizing_anaconda.txt  customizing_the_gnome_desktop_environment.txt  deduplicating_and_compressing_logical_volumes_on_rhel.txt  deploying_mail_servers.txt  deploying_red_hat_enterprise_linux_7_on_public_cloud_platforms.txt  deploying_rhel_9_on_amazon_web_services.txt  deploying_rhel_9_on_google_cloud_platform.txt  deploying_rhel_9_on_microsoft_azure.txt  deploying_web_servers_and_reverse_proxies.txt  desktop_migration_and_administration_guide.txt  developer_guide.txt  developing_c_and_cpp_applications_in_rhel_9.txt  dm_multipath.txt  getting_started_with_the_gnome_desktop_environment.txt  (+51 more)
plaintext/clouds/: aws.txt
rlsrag/: __init__.py  config.py  download_model.py  embed.py  infer.py  infrastructure.py  query_api.py  utils.py
scripts/: startup.sh
tests/: test_config.py  test_download_model.py  test_embed.py  test_utils.py
